# crabmanager

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  log4rs.yml
migrations/: 20241020060634_create_tables_and_fk_0001.sql
src/: main.rs
src/config/: database.rs
src/handlers/: merchant_handler.rs  mod.rs  order_handler.rs  order_item_handler.rs  product_handler.rs  transaction_handler.rs  user_handler.rs
src/models/: merchant_model.rs  mod.rs  order_item_model.rs  order_model.rs  product_category_model.rs  product_model.rs  transaction_model.rs  user_model.rs
src/repositories/: mod.rs  user_repository.rs
