[package]
name = "crab_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
sqlx = { version = "0.8.2", features = ["mysql", "chrono", "runtime-async-std-native-tls"] }
